[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
itertools = "0.10.5"
rayon = "1.6.0"
indoc = "1.0"
pathfinding = "4.0.1"

[[bin]]
name = "run-day" 
path = "src/main.rs"

[[bin]]
name = "new-day" 
path = "src/new_day.rs"